# ts-codegen

./: .eslintrc.json  .gitignore  README.md  lerna.json  package-lock.json  package.json
.github/workflows/: run-tests.yaml
__fixtures__/abstract/apps/: autocompounder.json  betting.json  subscription.json
__fixtures__/basic/: ownership.json
__fixtures__/cosmwasm/: api.json
__fixtures__/daodao/cw-admin-factory/: query_msg.json
__fixtures__/issues/103/: schema.json
__fixtures__/sg721-updatable/: Cargo.toml  NOTICE  README.md  all_tokens_response.json  query_msg.json
__fixtures__/sg721-updatable/examples/: schema.rs
__fixtures__/sg721-updatable/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
__fixtures__/vectis/: execute_msg_for__empty.json
__fixtures__/wager/: cw-wager.json
__output__/cosmwasm/: CW4Group.client.ts  CW4Group.message-composer.ts  CW4Group.react-query.ts  CW4Group.recoil.ts  CW4Group.types.ts  CW4GroupContract.from-partial.ts  CW4GroupContract.message-composer.ts  CW4GroupContract.react-query.ts  CW4GroupContract.recoil.ts  CW4GroupContract.ts
__output__/cw-named-groups/: CwNamedGroupsContract.from-partial.ts  CwNamedGroupsContract.react-query.ts  CwNamedGroupsContract.recoil.ts  CwNamedGroupsContract.ts
__output__/minter/: Minter.client.ts  Minter.message-composer.ts  Minter.react-query.ts  MinterContract.from-partial.ts  MinterContract.message-composer.ts  MinterContract.react-query.ts  MinterContract.recoil.ts  MinterContract.ts
__output__/sg721/: Sg721.client.ts  Sg721.message-builder.ts  Sg721.message-composer.ts  Sg721.provider.ts  Sg721.react-query.ts  Sg721.recoil.ts  Sg721.types.ts  Sg721Contract  Sg721Contract.from-partial.ts  Sg721Contract.react-query.ts  Sg721Contract.recoil.ts  Sg721Contract.ts  clean.json  contractContextProviders.ts  orig.json
__output__/sg721-updatable/: Sg721Updatable.client.ts  Sg721Updatable.message-composer.ts  Sg721Updatable.react-query.ts  Sg721Updatable.types.ts  bundle.ts
__output__/vectis/: MyContractContract.from-partial.ts  MyContractContract.ts
(+278 files in other folders)
